# fast-api-django-orm

./: .gitignore  Makefile  README.md  enums.py  main.py  pyproject.toml  utils.py
code/: .gitignore  main.py  manage.py
code/config/: settings.py
code/db_app/: models.py
code/db_app/migrations/: 0001_initial.py  0002_alter_user_salt.py  0003_alter_user_password.py
code/routers/: users.py
config/: settings.py
db_app/: models.py
db_app/migrations/: 0004_remove_user_salt.py  0005_remove_transaction_category_remove_budget_category_and_more.py
routers/: accounts.py  auth.py  transactions.py  users.py
tests/: conftest.py  test_accounts.py  test_transactions.py  test_users.py
